Mensaje descriptivo de los cambios

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       </div>
       <div id="results">
         <div>
-            <img src="image.png" alt="">
+            <img src="aqui/image.png" alt="">
           </div>
         <div class="content">
-          <p>No puss no pudiste</p>
+          <p>Suerte para la proxima</p>
           <p>Preciona R para intentar nuevamente</p>
         </div>
       </div>
