Correcion en el error de la posicion de los cubos

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <img src="aqui/image.png" alt="">
           </div>
         <div class="content">
-          <p>Suerte para la proxima</p>
+          <p>Suerte para la otra</p>
           <p>Preciona R para intentar nuevamente</p>
         </div>
       </div>
